--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "superagent": "^5.2.2"
+  },
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.3",
@@ -41,7 +43,7 @@
     "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0",
     "onchange": "^5.2.0",
-    "stylelint": "^9.10.1",
+    "stylelint": "^13.5.0",
     "stylelint-scss": "^3.5.4"
   }
 }
